--- a/src/main/resources/template/velocity/SqlMapServiceImpl.vm
+++ b/src/main/resources/template/velocity/SqlMapServiceImpl.vm
@@ -1,4 +1,3 @@
-#parse("template/velocity/fun.vm")
 /**
  * 
  */
@@ -22,7 +21,7 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	@org.springframework.transaction.annotation.Transactional
 	@Override
 	public void ${saveMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
-		#foreach( $column in ${entity.jspColumns})
+		#foreach( $column in ${entity.tableColumns})
 		#if(${column.editRenderShow} == false)
 		#if(${column.newValueJavaCode})
 			${column.newValueJavaCode}
@@ -38,7 +37,7 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	@org.springframework.transaction.annotation.Transactional
 	@Override
 	public void ${updateMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
-		#foreach( $column in ${entity.jspColumns})
+		#foreach( $column in ${entity.tableColumns})
 		#if(${column.editRenderShow} == false)
 		#if(${column.editValueJavaCode})
 			${column.editValueJavaCode}
@@ -52,12 +51,12 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 * get pojo by pk;
 	 */
 	@Override
-	public ${pojoFullPackageName}.${entity.entityBeanName} ${getMethodPrefix}${entity.entityBeanName}(#pks_argument(${entity.columns} ${sqlMapMarkUse})){
+	public ${pojoFullPackageName}.${entity.entityBeanName} ${getMethodPrefix}${entity.entityBeanName}(#pks_argument(${entity.tableColumns})){
 		java.util.Map<String, Object> params = new java.util.HashMap<String, Object>();
-		#pks_params(${entity.columns} ${sqlMapMarkUse})
-		java.util.Map<java.lang.String, java.lang.Object> tmp = dao.${getMethodPrefix}${entity.entityBeanName}(params);
+		#pks_params(${entity.tableColumns})
+		java.util.Map<java.lang.String, java.lang.Object> tmp = this.dao.${getMethodPrefix}${entity.entityBeanName}(params);
 		if(tmp == null) return null;
-		com.google.gson.Gson gson = com.incito.zhcs.util.GsonHelper.create();
+		com.google.gson.Gson gson = ${gsonHelperPackageName}.GsonHelper.create();
 		${pojoFullPackageName}.${entity.entityBeanName} result = gson.fromJson(gson.toJson(tmp), ${pojoFullPackageName}.${entity.entityBeanName}.class);
 		return result;
 	}
@@ -67,9 +66,9 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 */
 	@org.springframework.transaction.annotation.Transactional
 	@Override
-	public void ${deleteMethodPrefix}${entity.entityBeanName}(#pks_argument_array(${entity.columns} ${sqlMapMarkUse})){
+	public void ${deleteMethodPrefix}${entity.entityBeanName}(#pks_argument_array(${entity.tableColumns})){
 		java.util.Map<String, Object> params = new java.util.HashMap<String, Object>();
-		#pks_params(${entity.columns} ${sqlMapMarkUse})
+		#pks_params(${entity.tableColumns})
 		this.dao.${deleteMethodPrefix}${entity.entityBeanName}(params);
 	}
 	
@@ -77,14 +76,8 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 * query pojo list;
 	 */
 	@Override
-	public java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
-		java.util.List<java.util.Map<String, Object>> list = this.dao.${queryMethodPrefix}${entity.entityBeanName}(obj);
-		com.google.gson.Gson gson = ${gsonHelperPackageName}.GsonHelper.create();
-		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> result = new java.util.ArrayList<${pojoFullPackageName}.${entity.entityBeanName}>();
-		for (java.util.Map<String, Object> map : list) {
-			${pojoFullPackageName}.${entity.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${entity.entityBeanName}.class);
-			result.add(o);
-		}
+	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj){
+		java.util.List<java.util.Map<String, Object>> result = this.dao.${queryMethodPrefix}${entity.entityBeanName}(obj);
 		return result;
 	}
 	
@@ -92,9 +85,9 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 * query paging pojo list;
 	 */
 	@Override
-	public ${idataCollectionPackageName}.IDataCollection<${pojoFullPackageName}.${entity.entityBeanName}> ${queryPagingMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj, ${pagingPackageName}.Paging paging){
-		${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${entity.entityBeanName}> result = new ${defaultListDataCollectionPackageName}.DefaultListDataCollection<${pojoFullPackageName}.${entity.entityBeanName}>();
-		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> empty = java.util.Collections.emptyList();
+	public ${idataCollectionPackageName}.IDataCollection<java.util.Map<java.lang.String, java.lang.Object>> ${queryPagingMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj, ${pagingPackageName}.Paging paging){
+		${defaultListDataCollectionPackageName}.DefaultListDataCollection<java.util.Map<java.lang.String, java.lang.Object>> result = new ${defaultListDataCollectionPackageName}.DefaultListDataCollection<java.util.Map<java.lang.String, java.lang.Object>>();
+		java.util.List<java.util.Map<java.lang.String, java.lang.Object>> empty = java.util.Collections.emptyList();
 		result.setData(empty);
 		java.util.Map<java.lang.String, java.lang.Object> params = new java.util.HashMap<java.lang.String, java.lang.Object>();
 		${defaultCollectionHelperPackageName}.CollectionHelper.object2Map(obj, params);
@@ -103,16 +96,11 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 		if(Integer.valueOf("0").equals(totalRows)){
 			return result;
 		}
-		params.put("start", paging.getStart());
-		params.put("length", paging.getLength());
+		params.put("__start", paging.getStart());
+		params.put("__length", paging.getLength());
 		java.util.List<java.util.Map<String, java.lang.Object>> list = this.dao.${queryPagingMethodPrefix}${entity.entityBeanName}(params);
-		com.google.gson.Gson gson = ${gsonHelperPackageName}.GsonHelper.create();
-		java.util.List<${pojoFullPackageName}.${entity.entityBeanName}> data = new java.util.ArrayList<${pojoFullPackageName}.${entity.entityBeanName}>();
-		for (java.util.Map<String, Object> map : list) {
-			${pojoFullPackageName}.${entity.entityBeanName} o = gson.fromJson(gson.toJson(map), ${pojoFullPackageName}.${entity.entityBeanName}.class);
-			data.add(o);
-		}
-		result.setData(data);
+		result.setData(list);
 		return result;
 	}
 }
+#parse("template/velocity/fun.vm")
