--- a/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
@@ -1,6 +1,7 @@
 <%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
 <%@taglib uri="http://www.springframework.org/tags" prefix="spring"%>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@taglib tagdir="/WEB-INF/tags" prefix="cus" %>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,11 +12,7 @@
 #parse("template/velocity/jspComponent.vm")
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <link href="#[[${]]#${jspContextPathVar}#[[}]]#/js/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="#[[${]]#${jspContextPathVar}#[[}]]#/js/bootstrapvalidator/css/bootstrapValidator.css" rel="stylesheet">
-    <link href="#[[${]]#${jspContextPathVar}#[[}]]#/js/datatable/css/dataTables.bootstrap.min.css" rel="stylesheet">
-   
+	<cus:Css/>
    #* 
     <style>
     .show-grid{margin-bottom:15px}
@@ -161,16 +158,8 @@
     </form>
   </div>
 </div>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/jquery-2.1.4/jquery-2.1.4.min.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/jquery/jquery.form.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/jquery/jquery.blockUI.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/bootstrap/js/bootstrap.min.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/bootstrapvalidator/js/bootstrapValidator.min.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/datatable/js/jquery.dataTables.min.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/datatable/js/dataTables.bootstrap.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/util2.js"></script>
-<script src="#[[${]]#${jspContextPathVar}#[[}]]#/js/tables.js"></script>
 
+<cus:JavaScript/>
 <script type="text/javascript">
 $(document).ready(function(){
 	/**
